# promrail

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  justfile  promrail.yaml
.ci/: PKGBUILD-bin.j2  PKGBUILD.j2  generate-pkgbuild.rh  release.sh
.github/workflows/: aur-publish.yml  auto-tag.yaml  pre-commit.yml  rust.yml
.opencode/skills/release/: SKILL.md
crates/config-doc/: Cargo.toml
crates/config-doc-derive/: Cargo.toml
crates/config-doc-derive/src/: lib.rs
crates/config-doc/src/: lib.rs
docs/: adr-001-architecture.md  adr-002-automatic-review-artifacts.md  usage.md  workflows.md
scripts/: promote-complex.sh
src/: cli.rs  config.rs  error.rs  logger.rs  main.rs
src/audit/: log.rs
src/commands/: diff.rs  mod.rs  promote.rs  validate.rs
src/display/: mod.rs  promote_output.rs
src/files/: discovery.rs  mod.rs  selector.rs
src/git/: diff.rs  mod.rs  repo.rs
src/paths/: patterns.rs
src/review/: analyze.rs  apply.rs  mod.rs  models.rs  store.rs
src/versions/: apply.rs  config_diff.rs  conflict.rs  extract.rs  merge.rs  mod.rs  models.rs  snapshot.rs
tests/: e2e.rs
