[workspace]
members = [".", "crates/config-doc", "crates/config-doc-derive"]
resolver = "2"

[package]
name = "promrail"
version = "0.3.0"
edition = "2024"
authors = ["Pando85 <pando855@gmail.com>"]
description = "Git-native GitOps promotion tool"
license-file = "./LICENSE"
homepage = "https://github.com/forkline/prl"
repository = "https://github.com/forkline/prl"
readme = "./README.md"
categories = ["command-line-utilities"]
keywords = ["gitops", "promotion", "kubernetes", "cli"]

[[bin]]
name = "prl"
path = "src/main.rs"

[dependencies]
config-doc = { path = "crates/config-doc" }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
globset = "0.4"
glob-match = "0.2"
git2 = { version = "0.19", features = ["vendored-libgit2"] }
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
anyhow = "1"
thiserror = "2"
console = "0.15"
indicatif = "0.17"
time = { version = "0.3", features = ["formatting", "local-offset"] }
dirs = "6"
walkdir = "2"
regex = "1"
ignore = "0.4"

[dev-dependencies]
tempfile = "3"

[lints.rust]
dead_code = "allow"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
